--- a/index.html
+++ b/index.html
@@ -657,8 +657,8 @@
                     <div class="col-md-3">
                         <h4 class="list-title">Застроищикам</h4>
                         <ul>
-                            <li><a href="./pages/borehole/borehole.html">Геотермальная скважина</a></li>
-                            <li><a href="#">Сделать расчет</a></li>
+                            <li><a href="./borehole.html">Геотермальная скважина</a></li>
+                            <li><a href="./calculate.html">Сделать расчет</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
