--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
                 <button class="lang">
                     EN
                 </button>
+
+                <a class="btn btn-pry" href="#">
+                    Напишите нам!
+                </a>
             </div>
             <button class="nav-btn" type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
@@ -657,8 +661,8 @@
                     <div class="col-md-3">
                         <h4 class="list-title">Застроищикам</h4>
                         <ul>
-                            <li><a href="./pages/borehole/borehole.html">Геотермальная скважина</a></li>
-                            <li><a href="#">Сделать расчет</a></li>
+                            <li><a href="borehole.html">Геотермальная скважина</a></li>
+                            <li><a href="detailes.html">Сделать расчет</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
