Catalog Page and details

--- a/borehole.html
+++ b/borehole.html
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="col-md-7">
                 <div class="hero-text">
-                    <h1 class="title-main">Геотермальная скважина</h1>
+                    <h1 class="title-hero">Геотермальная скважина</h1>
                     <p>экономичная и № 1 по эффективности<br/>
                         для отопления и охлаждения</p>
                     <div class="btns">
