--- a/catalog-inner.html
+++ b/catalog-inner.html
@@ -115,12 +115,12 @@
     </div>
 </header>
 
-<section class="section-pd calculate">
+<section class="section-pd catalog">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
 
-                <a href="index.html" class="btn-back">
+                <a href="catalog.html" class="btn-back">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="sr-longarrow-left">
                             <path id="line" fill-rule="evenodd" clip-rule="evenodd"
@@ -132,59 +132,12 @@
                 </a>
             </div>
 
-            <div class="col-md-8">
-                <h1 class="title-hero mb-3 mt-5">Рассчитайте Ваш дом</h1>
-                <div class="calculate-card">
-                    <div class="card-inner">
-                        <div class="form">
-                            <div class="group-form mb-4">
-                                <input class="group-control" id="calculate-input" placeholder="0 кв м2"
-                                       oninput="validateNumberInput(this)"/>
-                                <!-- <span class="hint"></span> -->
-                            </div>
-                            <button class="btn btn-pry" id="calculate-btn">Рассчитать</button>
-                        </div>
-                        <div class="result">
-                            <p>Вот столько это будет стоить</p>
-                            <h3 id="price">~0 ₸</h3>
-                            <button class="btn-details" style="display: none">Раскрыть детали</button>
-                        </div>
-                    </div>
-                    <div class="more-details">
-                        <h3>Детали стоимости</h3>
-                        <div class="details-container">
-                            <ul class="details-list">
-                                <li id="mats-price">
-                                    <span class="title">Капилярного мата</span>
-                                    <span class="price">1 731 494 ₸</span>
-                                </li>
-                                <li>
-                                    <span class="title">Холодильная машина</span>
-                                    <span class="price" id="ice-machine-price">3 341 250 ₸</span>
-                                </li>
-                                <li>
-                                    <span class="title">Расчет стоимости работ</span>
-                                    <span class="price">1 023 566 ₸</span>
-                                </li>
-                                <li>
-                                    <span class="title">Расходники</span>
-                                    <span class="price">2 104 542 ₸</span>
-                                </li>
-                            </ul>
-                            <ul class="details-list">
-                                <li>
-                                    <input type="checkbox" id="hot-water"/>
-                                    <label for="hot-water">+ Горячая вода</label>
-                                </li>
-                                <li>
-                                    <input type="checkbox" id="putty"/>
-                                    <label for="putty">+ Левкас (шпатлевка)</label>
-                                <li>
+            <div class="col-md-12">
+                <h1 class="title-hero mb-3 mt-5">Капилярные маты</h1>
+                <div class="catalog-grid">
 
+                    
 
-                            </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
 
