--- a/calculate.html
+++ b/calculate.html
@@ -170,6 +170,7 @@
                                     <span class="title">Расходники</span>
                                     <span class="price">2 104 542 ₸</span>
                                 </li>
+
                             </ul>
                             <ul class="details-list">
                                 <li>
@@ -184,6 +185,7 @@
 
                             </ul>
                         </div>
+                        <button onclick="generatePDF()">Скачать документ</button>
                     </div>
                 </div>
             </div>
