--- a/catalog-inner.html
+++ b/catalog-inner.html
@@ -134,9 +134,17 @@
 
             <div class="col-md-12">
                 <h1 class="title-hero mb-3 mt-5">Капилярные маты</h1>
-                <div class="catalog-grid">
+                <div class="catalog-inner">
 
-                    
+                    <div class="catalog-tabs">
+
+                    </div>
+                    <div class="catalog-images">
+
+                    </div>
+                    <div class="catalog-info">
+                        <p>Капиллярная трубка холодильника (капиллярный трубопровод) — важнейшая деталь в устройстве холодильного агрегата. Она представляет собой прибор, предназначенный для передачи хладагента в испаритель. Капиллярная трубка является трубопроводом, создающим разницу в давлении между испарителем и конденсатором. Таким образом, становится возможной подача в испаритель именно такого количества хладагента, которое необходимо для эффективного охлаждения воздуха внутри камер. При остановках компрессора капиллярная трубка уравнивает давление в холодильнике, снижая нагрузку на электродвигатель и препятствуя его быстрому сгоранию.</p>
+                    </div>
 
                 </div>
             </div>
