--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
                                 подробнее
                             </button>
                             
-                            <img src="img/main/polaredge-fall.gif" />
+                            <!-- <img src="img/main/polaredge-fall.gif" /> -->
+                            <video src="img/text-fall.mp4" loop="true" muted="muted" autoplay></video>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -661,8 +662,8 @@
                     <div class="col-md-3">
                         <h4 class="list-title">Застроищикам</h4>
                         <ul>
-                            <li><a href="borehole.html">Геотермальная скважина</a></li>
-                            <li><a href="detailes.html">Сделать расчет</a></li>
+                            <li><a href="./pages/borehole/borehole.html">Геотермальная скважина</a></li>
+                            <li><a href="#">Сделать расчет</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
