--- a/calculate.html
+++ b/calculate.html
@@ -9,6 +9,9 @@
     <title>Polaredge</title>
 
     <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKNRRhy5X5AAOnx5S09ydFYWWNSfcEqDTTHgtNA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./libs/jquery-3.7.1.slim.min.js" defer></script>
     <script src="./libs/owl/owl.carousel.min.js" defer></script>
     <script src="./libs/gsap/gsap.min.js" defer></script>
@@ -133,7 +136,7 @@
             </div>
 
             <div class="col-md-8">
-                <h1 class="title-hero mb-3 mt-5">Рассчитайте Ваш дом</h1>
+                <h1 class="title-hero mb-3 mt-5" id="calculatorWrapper">Рассчитайте Ваш дом</h1>
                 <div class="calculate-card">
                     <div class="card-inner">
                         <div class="form">
