--- a/calculate.html
+++ b/calculate.html
@@ -62,14 +62,14 @@
           </svg>
       </span>
     </a>
-    <a href="borehole.html" class="navbar-link">
+    <a href="catalog.html" class="navbar-link">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M11 2C11 1.44772 10.5523 1 10 1C9.44771 1 9 1.44772 9 2V8.58578L6.70711 6.29289C6.31658 5.90237 5.68342 5.90237 5.29289 6.29289C4.90237 6.68342 4.90237 7.31658 5.29289 7.70711L9.29289 11.7071C9.48043 11.8946 9.73478 12 10 12C10.2652 12 10.5196 11.8946 10.7071 11.7071L14.7071 7.70711C15.0976 7.31658 15.0976 6.68342 14.7071 6.29289C14.3166 5.90237 13.6834 5.90237 13.2929 6.29289L11 8.58579V2Z"
-                  fill="#333333"/>
-            <path d="M17.2929 17.7071C17.6834 18.0976 18.3166 18.0976 18.7071 17.7071C19.0976 17.3166 19.0976 16.6834 18.7071 16.2929L14.7071 12.2929C14.5196 12.1054 14.2652 12 14 12C13.7348 12 13.4804 12.1054 13.2929 12.2929L9.29289 16.2929C8.90237 16.6834 8.90237 17.3166 9.29289 17.7071C9.68342 18.0976 10.3166 18.0976 10.7071 17.7071L13 15.4142V22C13 22.5523 13.4477 23 14 23C14.5523 23 15 22.5523 15 22V15.4142L17.2929 17.7071Z"
-                  fill="#333333"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.3714 2.07152C12.133 1.97616 11.867 1.97616 11.6286 2.07152L1.6286 6.07152C1.24895 6.22339 1 6.5911 1 7C1 7.4089 1.24895 7.77661 1.6286 7.92848L11.6286 11.9285C11.867 12.0238 12.133 12.0238 12.3714 11.9285L22.3714 7.92848C22.7511 7.77661 23 7.4089 23 7C23 6.5911 22.7511 6.22339 22.3714 6.07152L12.3714 2.07152ZM12 9.92297L4.69258 7L12 4.07703L19.3074 7L12 9.92297Z" fill="currentColor"/>
+            <path d="M1.07179 11.6286C1.2769 11.1158 1.85887 10.8664 2.37165 11.0715L12.0002 14.923L21.6288 11.0715C22.1416 10.8664 22.7236 11.1158 22.9287 11.6286C23.1338 12.1414 22.8844 12.7234 22.3716 12.9285L12.3716 16.9285C12.1332 17.0239 11.8672 17.0239 11.6288 16.9285L1.62887 12.9285C1.11609 12.7234 0.866674 12.1414 1.07179 11.6286Z" fill="currentColor"/>
+            <path d="M1.07179 16.6286C1.2769 16.1158 1.85887 15.8664 2.37165 16.0715L12.0002 19.923L21.6288 16.0715C22.1416 15.8664 22.7236 16.1158 22.9287 16.6286C23.1338 17.1414 22.8844 17.7234 22.3716 17.9285L12.3716 21.9285C12.1332 22.0239 11.8672 22.0239 11.6288 21.9285L1.62887 17.9285C1.11609 17.7234 0.866674 17.1414 1.07179 16.6286Z" fill="currentColor"/>
         </svg>
-        Про скважину
+            
+        Каталог
     </a>
 </nav>
 <header class="header-edge">
@@ -136,25 +136,26 @@
             </div>
 
             <div class="col-md-8">
-                <h1 class="title-hero mb-3 mt-5" id="calculatorWrapper">Рассчитайте Ваш дом</h1>
+                <h1 class="title-hero mb-3 mt-5" id="calculatorWrapper">Рассчитайте Ваш&nbsp;дом</h1>
                 <div class="calculate-card">
                     <div class="card-inner">
                         <div class="form">
                             <div class="group-form mb-4">
-                                <input class="group-control" id="calculate-input" placeholder="0 кв м2"
+                                <input type="text" pattern="\d*" class="group-control" id="calculate-input" placeholder="Введите площадь дома в кв м²"
                                        oninput="validateNumberInput(this)"/>
                                 <!-- <span class="hint"></span> -->
+                                <!-- <span class="sup-text">м<sup>2</sup></span> -->
                             </div>
                             <button class="btn btn-pry" id="calculate-btn">Рассчитать</button>
                         </div>
                         <div class="result">
-                            <p>Вот столько это будет стоить</p>
+                            <p>Сколько это будет стоить</p>
                             <h3 id="price">~0 ₸</h3>
                             <button class="btn-details" style="display: none">Раскрыть детали</button>
                         </div>
                     </div>
                     <div class="more-details">
-                        <h3>Детали стоимости</h3>
+                        <h3>Из чего складывается сумма</h3>
                         <div class="details-container">
                             <ul class="details-list">
                                 <li id="mats-price">
@@ -164,10 +165,19 @@
                                 <li>
                                     <span class="title">Холодильная машина</span>
                                     <span class="price" id="ice-machine-price">3 341 250 ₸</span>
+
+                                    <div class="checkbox-group">
+                                        <input id="hot-water" class="checkbox" type="checkbox">
+                                        <label for="hot-water" class="checkbox-label">+ Горячая вода</label>
+                                    </div>
                                 </li>
                                 <li>
                                     <span class="title">Расчет стоимости работ</span>
                                     <span class="price">1 023 566 ₸</span>
+                                    <div class="checkbox-group">
+                                        <input id="putty" class="checkbox" type="checkbox">
+                                        <label for="putty" class="checkbox-label">+ Левкас (шпатлевка)</label>
+                                    </div>
                                 </li>
                                 <li>
                                     <span class="title">Расходники</span>
@@ -175,20 +185,28 @@
                                 </li>
 
                             </ul>
-                            <ul class="details-list">
+                            <!-- <ul class="details-list">
                                 <li>
-                                    <input type="checkbox" id="hot-water"/>
-                                    <label for="hot-water">+ Горячая вода</label>
+                                    <div class="checkbox-group">
+                                        <input id="hot-water" class="checkbox" type="checkbox">
+                                        <label for="hot-water" class="checkbox-label">+ Горячая вода</label>
+                                    </div>
                                 </li>
                                 <li>
-                                    <input type="checkbox" id="putty"/>
-                                    <label for="putty">+ Левкас (шпатлевка)</label>
+                                    <div class="checkbox-group">
+                                        <input id="putty" class="checkbox" type="checkbox">
+                                        <label for="putty" class="checkbox-label">+ Левкас (шпатлевка)</label>
+                                    </div>
                                 <li>
-
-
-                            </ul>
+                            </ul> -->
                         </div>
-                        <button onclick="generatePDF()">Скачать документ</button>
+                        <button class="btn-icon btn btn-sndry mt-3" onclick="generatePDF()">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M11 13.5858V2C11 1.44771 11.4477 1 12 1C12.5523 1 13 1.44771 13 2V13.5858L16.2929 10.2929C16.6834 9.90237 17.3166 9.90237 17.7071 10.2929C18.0976 10.6834 18.0976 11.3166 17.7071 11.7071L12.7071 16.7071C12.3166 17.0976 11.6834 17.0976 11.2929 16.7071L6.29289 11.7071C5.90237 11.3166 5.90237 10.6834 6.29289 10.2929C6.68342 9.90237 7.31658 9.90237 7.70711 10.2929L11 13.5858Z" fill="#333333"/>
+                                <path d="M2 15C2.55228 15 3 15.4477 3 16V20C3 20.5523 3.44772 21 4 21H20C20.5523 21 21 20.5523 21 20V16C21 15.4477 21.4477 15 22 15C22.5523 15 23 15.4477 23 16V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V16C1 15.4477 1.44772 15 2 15Z" fill="#333333"/>
+                            </svg>                                
+                            Скачать документ
+                        </button>
                     </div>
                 </div>
             </div>
