--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         Про скважину
     </a>
 </nav>
-<header id="fix-head" class="header-edge">
+<header id="fix-head" class="header-edge top-header">
     <div class="container">
         <div class="header-inner">
             <div class="logo">
