--- a/borehole.html
+++ b/borehole.html
@@ -62,7 +62,7 @@
         Про скважину
     </a>
 </nav>
-<header class="header-edge">
+<header class="header-edge top-header">
     <div class="container">
         <div class="header-inner">
             <div class="logo">
