--- a/calculate.html
+++ b/calculate.html
@@ -72,7 +72,7 @@
         Про скважину
     </a>
 </nav>
-<header class="header-edge">
+<header class="header-edge top-header">
     <div class="container">
         <div class="header-inner">
             <div class="logo">
@@ -136,7 +136,7 @@
             </div>
 
             <div class="col-md-8">
-                <h1 class="title-hero mb-3 mt-5" id="calculatorWrapper">Рассчитайте Ваш дом</h1>
+                <h1 class="title-hero mb-3 mt-5">Рассчитайте Ваш дом</h1>
                 <div class="calculate-card">
                     <div class="card-inner">
                         <div class="form">
@@ -153,7 +153,7 @@
                             <button class="btn-details" style="display: none">Раскрыть детали</button>
                         </div>
                     </div>
-                    <div class="more-details">
+                    <div class="more-details" id="forPDF">
                         <h3>Детали стоимости</h3>
                         <div class="details-container">
                             <ul class="details-list">
