--- a/detailes.html
+++ b/detailes.html
@@ -66,7 +66,7 @@
             Про скважину
         </a>
     </nav>
-    <header class="header-edge">
+    <header class="header-edge top-header">
         <div class="container">
             <div class="header-inner">
                 <div class="logo">
