some fixes in calculate page

--- a/calculate.html
+++ b/calculate.html
@@ -135,7 +135,7 @@
                 </a>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-md-8" id="forPDF">
                 <h1 class="title-hero mb-3 mt-5" id="calculatorWrapper">Рассчитайте Ваш&nbsp;дом</h1>
                 <div class="calculate-card">
                     <div class="card-inner">
@@ -153,7 +153,7 @@
                             <button class="btn-details" style="display: none">Раскрыть детали</button>
                         </div>
                     </div>
-                    <div class="more-details" id="forPDF">
+                    <div class="more-details">
                         <h3>Из чего складывается сумма</h3>
                         <div class="details-container">
                             <ul class="details-list">
